--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -48,7 +48,8 @@
 
 .modal-content input {
   width: 100%;
-  padding: 12px;
+  box-sizing: border-box; /* учитываем padding в ширину */
+  padding: 12px 15px;     /* одинаково слева/справа */
   margin: 10px 0;
   border-radius: 10px;
   border: none;
@@ -56,7 +57,9 @@
   font-size: 16px;
   background-color: #0f0f11;
   color: #fff;
+  text-align: left;       /* оставляем текст слева */
 }
+
 
 .btn-submit {
   width: 100%;
